# serializer version: 1
# name: test_component_paint_matches_the_snapshot[#navbar a[href="/netsuke/docs/"]-desktop]
  dict({
    'backgroundColor': 'rgba(0, 0, 0, 0)',
    'borderTopColor': 'rgb(194, 59, 34)',
    'borderTopLeftRadius': '0.0px',
    'borderTopStyle': 'solid',
    'borderTopWidth': '0.0px',
    'boxShadow': 'none',
    'color': 'rgb(46, 42, 37)',
    'cursor': 'pointer',
    'display': 'inline',
    'fontFamily': '"Source Sans 3", sans-serif',
    'fontSize': '14.0px',
    'lineHeight': '20.0px',
    'marginLeft': '0.0px',
    'marginRight': '0.0px',
    'overflowWrap': 'normal',
    'paddingBottom': '4.0px',
    'paddingLeft': '0.0px',
    'paddingRight': '0.0px',
    'paddingTop': '4.0px',
  })
# ---
# name: test_component_paint_matches_the_snapshot[#navbar a[href="/netsuke/docs/"]-phone]
  dict({
    'backgroundColor': 'rgba(0, 0, 0, 0)',
    'borderTopColor': 'rgb(194, 59, 34)',
    'borderTopLeftRadius': '0.0px',
    'borderTopStyle': 'solid',
    'borderTopWidth': '0.0px',
    'boxShadow': 'none',
    'color': 'rgb(46, 42, 37)',
    'cursor': 'pointer',
    'display': 'inline',
    'fontFamily': '"Source Sans 3", sans-serif',
    'fontSize': '14.0px',
    'lineHeight': '20.0px',
    'marginLeft': '0.0px',
    'marginRight': '0.0px',
    'overflowWrap': 'normal',
    'paddingBottom': '4.0px',
    'paddingLeft': '0.0px',
    'paddingRight': '0.0px',
    'paddingTop': '4.0px',
  })
# ---
# name: test_component_paint_matches_the_snapshot[#navbar-mobile-toggle-desktop]
  dict({
    'backgroundColor': 'rgba(0, 0, 0, 0)',
    'borderTopColor': 'rgba(0, 0, 0, 0)',
    'borderTopLeftRadius': '6.0px',
    'borderTopStyle': 'solid',
    'borderTopWidth': '1.0px',
    'boxShadow': 'none',
    'color': 'rgb(46, 42, 37)',
    'cursor': 'pointer',
    'display': 'none',
    'fontFamily': '"Source Sans 3", sans-serif',
    'fontSize': '20.0px',
    'lineHeight': '30.0px',
    'marginLeft': '0.0px',
    'marginRight': '0.0px',
    'overflowWrap': 'normal',
    'paddingBottom': '0.0px',
    'paddingLeft': '0.0px',
    'paddingRight': '0.0px',
    'paddingTop': '0.0px',
  })
# ---
# name: test_component_paint_matches_the_snapshot[#navbar-mobile-toggle-phone]
  dict({
    'backgroundColor': 'rgba(0, 0, 0, 0)',
    'borderTopColor': 'rgba(0, 0, 0, 0)',
    'borderTopLeftRadius': '6.0px',
    'borderTopStyle': 'solid',
    'borderTopWidth': '1.0px',
    'boxShadow': 'none',
    'color': 'rgb(46, 42, 37)',
    'cursor': 'pointer',
    'display': 'flex',
    'fontFamily': '"Source Sans 3", sans-serif',
    'fontSize': '20.0px',
    'lineHeight': '30.0px',
    'marginLeft': '0.0px',
    'marginRight': '0.0px',
    'overflowWrap': 'normal',
    'paddingBottom': '0.0px',
    'paddingLeft': '0.0px',
    'paddingRight': '0.0px',
    'paddingTop': '0.0px',
  })
# ---
# name: test_component_paint_matches_the_snapshot[main.hm-docs-content-desktop]
  dict({
    'backgroundColor': 'rgba(0, 0, 0, 0)',
    'borderTopColor': 'rgb(46, 42, 37)',
    'borderTopLeftRadius': '0.0px',
    'borderTopStyle': 'solid',
    'borderTopWidth': '0.0px',
    'boxShadow': 'none',
    'color': 'rgb(46, 42, 37)',
    'cursor': 'auto',
    'display': 'block',
    'fontFamily': '"Source Sans 3", sans-serif',
    'fontSize': '16.0px',
    'lineHeight': '24.0px',
    'marginLeft': '0.0px',
    'marginRight': '0.0px',
    'overflowWrap': 'normal',
    'paddingBottom': '48.0px',
    'paddingLeft': '48.0px',
    'paddingRight': '48.0px',
    'paddingTop': '48.0px',
  })
# ---
# name: test_component_paint_matches_the_snapshot[main.hm-docs-content-phone]
  dict({
    'backgroundColor': 'rgba(0, 0, 0, 0)',
    'borderTopColor': 'rgb(46, 42, 37)',
    'borderTopLeftRadius': '0.0px',
    'borderTopStyle': 'solid',
    'borderTopWidth': '0.0px',
    'boxShadow': 'none',
    'color': 'rgb(46, 42, 37)',
    'cursor': 'auto',
    'display': 'block',
    'fontFamily': '"Source Sans 3", sans-serif',
    'fontSize': '16.0px',
    'lineHeight': '24.0px',
    'marginLeft': '0.0px',
    'marginRight': '0.0px',
    'overflowWrap': 'break-word',
    'paddingBottom': '48.0px',
    'paddingLeft': '0.0px',
    'paddingRight': '0.0px',
    'paddingTop': '48.0px',
  })
# ---
# name: test_component_paint_matches_the_snapshot[section .hm-faux-window-desktop]
  dict({
    'backgroundColor': 'rgb(46, 42, 37)',
    'borderTopColor': 'rgb(92, 85, 77)',
    'borderTopLeftRadius': '12.0px',
    'borderTopStyle': 'solid',
    'borderTopWidth': '1.0px',
    'boxShadow': 'rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.1) 0px 4px 6px -4px',
    'color': 'rgb(46, 42, 37)',
    'cursor': 'auto',
    'display': 'block',
    'fontFamily': '"Source Sans 3", sans-serif',
    'fontSize': '16.0px',
    'lineHeight': '24.0px',
    'marginLeft': '0.0px',
    'marginRight': '0.0px',
    'overflowWrap': 'normal',
    'paddingBottom': '0.0px',
    'paddingLeft': '0.0px',
    'paddingRight': '0.0px',
    'paddingTop': '0.0px',
  })
# ---
# name: test_component_paint_matches_the_snapshot[section .hm-faux-window-phone]
  dict({
    'backgroundColor': 'rgb(46, 42, 37)',
    'borderTopColor': 'rgb(46, 42, 37)',
    'borderTopLeftRadius': '0.0px',
    'borderTopStyle': 'none',
    'borderTopWidth': '0.0px',
    'boxShadow': 'none',
    'color': 'rgb(46, 42, 37)',
    'cursor': 'auto',
    'display': 'block',
    'fontFamily': '"Source Sans 3", sans-serif',
    'fontSize': '11.2px',
    'lineHeight': '16.8px',
    'marginLeft': '-16.0px',
    'marginRight': '-16.0px',
    'overflowWrap': 'break-word',
    'paddingBottom': '0.0px',
    'paddingLeft': '0.0px',
    'paddingRight': '0.0px',
    'paddingTop': '0.0px',
  })
# ---
# name: test_component_paint_matches_the_snapshot[section .hm-faux-window__titlebar-desktop]
  dict({
    'backgroundColor': 'oklab(0.453709 0.00509886 0.0148526 / 0.2)',
    'borderTopColor': 'oklab(0.999994 0.0000455678 0.0000200868 / 0.1)',
    'borderTopLeftRadius': '0.0px',
    'borderTopStyle': 'solid',
    'borderTopWidth': '0.0px',
    'boxShadow': 'none',
    'color': 'rgb(46, 42, 37)',
    'cursor': 'auto',
    'display': 'flex',
    'fontFamily': '"Source Sans 3", sans-serif',
    'fontSize': '16.0px',
    'lineHeight': '24.0px',
    'marginLeft': '0.0px',
    'marginRight': '0.0px',
    'overflowWrap': 'normal',
    'paddingBottom': '12.0px',
    'paddingLeft': '16.0px',
    'paddingRight': '16.0px',
    'paddingTop': '12.0px',
  })
# ---
# name: test_component_paint_matches_the_snapshot[section .hm-faux-window__titlebar-phone]
  dict({
    'backgroundColor': 'oklab(0.453709 0.00509886 0.0148526 / 0.2)',
    'borderTopColor': 'oklab(0.999994 0.0000455678 0.0000200868 / 0.1)',
    'borderTopLeftRadius': '0.0px',
    'borderTopStyle': 'solid',
    'borderTopWidth': '0.0px',
    'boxShadow': 'none',
    'color': 'rgb(46, 42, 37)',
    'cursor': 'auto',
    'display': 'flex',
    'fontFamily': '"Source Sans 3", sans-serif',
    'fontSize': '11.2px',
    'lineHeight': '16.8px',
    'marginLeft': '0.0px',
    'marginRight': '0.0px',
    'overflowWrap': 'break-word',
    'paddingBottom': '12.0px',
    'paddingLeft': '16.0px',
    'paddingRight': '16.0px',
    'paddingTop': '12.0px',
  })
# ---
# name: test_component_paint_matches_the_snapshot[select option-desktop]
  dict({
    'backgroundColor': 'rgba(0, 0, 0, 0)',
    'borderTopColor': 'rgb(46, 42, 37)',
    'borderTopLeftRadius': '0.0px',
    'borderTopStyle': 'solid',
    'borderTopWidth': '0.0px',
    'boxShadow': 'none',
    'color': 'rgb(46, 42, 37)',
    'cursor': 'default',
    'display': 'block',
    'fontFamily': '"Source Sans 3", sans-serif',
    'fontSize': '14.0px',
    'lineHeight': '20.0px',
    'marginLeft': '0.0px',
    'marginRight': '0.0px',
    'overflowWrap': 'normal',
    'paddingBottom': '1.0px',
    'paddingLeft': '2.0px',
    'paddingRight': '2.0px',
    'paddingTop': '0.0px',
  })
# ---
# name: test_component_paint_matches_the_snapshot[select option-phone]
  dict({
    'backgroundColor': 'rgba(0, 0, 0, 0)',
    'borderTopColor': 'rgb(46, 42, 37)',
    'borderTopLeftRadius': '0.0px',
    'borderTopStyle': 'solid',
    'borderTopWidth': '0.0px',
    'boxShadow': 'none',
    'color': 'rgb(46, 42, 37)',
    'cursor': 'default',
    'display': 'block',
    'fontFamily': '"Source Sans 3", sans-serif',
    'fontSize': '14.0px',
    'lineHeight': '20.0px',
    'marginLeft': '0.0px',
    'marginRight': '0.0px',
    'overflowWrap': 'break-word',
    'paddingBottom': '1.0px',
    'paddingLeft': '2.0px',
    'paddingRight': '2.0px',
    'paddingTop': '0.0px',
  })
# ---
# name: test_component_paint_matches_the_snapshot[table td-desktop]
  dict({
    'backgroundColor': 'rgba(0, 0, 0, 0)',
    'borderTopColor': 'rgb(43, 65, 98)',
    'borderTopLeftRadius': '0.0px',
    'borderTopStyle': 'solid',
    'borderTopWidth': '0.0px',
    'boxShadow': 'none',
    'color': 'rgb(43, 65, 98)',
    'cursor': 'auto',
    'display': 'table-cell',
    'fontFamily': '"JetBrains Mono", monospace',
    'fontSize': '14.0px',
    'lineHeight': '20.0px',
    'marginLeft': '0.0px',
    'marginRight': '0.0px',
    'overflowWrap': 'normal',
    'paddingBottom': '16.0px',
    'paddingLeft': '24.0px',
    'paddingRight': '24.0px',
    'paddingTop': '16.0px',
  })
# ---
# name: test_component_paint_matches_the_snapshot[table td-phone]
  dict({
    'backgroundColor': 'rgba(0, 0, 0, 0)',
    'borderTopColor': 'rgb(43, 65, 98)',
    'borderTopLeftRadius': '0.0px',
    'borderTopStyle': 'solid',
    'borderTopWidth': '0.0px',
    'boxShadow': 'none',
    'color': 'rgb(43, 65, 98)',
    'cursor': 'auto',
    'display': 'table-cell',
    'fontFamily': '"JetBrains Mono", monospace',
    'fontSize': '14.0px',
    'lineHeight': '20.0px',
    'marginLeft': '0.0px',
    'marginRight': '0.0px',
    'overflowWrap': 'break-word',
    'paddingBottom': '16.0px',
    'paddingLeft': '24.0px',
    'paddingRight': '24.0px',
    'paddingTop': '16.0px',
  })
# ---
